# uiautomator2-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
skills/uiautomator2/: SKILL.md
skills/uiautomator2/evals/: evals.json
src/u2cli/: __init__.py  app.py  cli.py  device.py  element.py  screen.py
